--- a/itemsadder-blocks-injector-core/src/main/resources/plugin.yml
+++ b/itemsadder-blocks-injector-core/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: ItemsAdderBlocksInjector
-version: '${project.version}'
+version: 0.0.2
 main: dev.lone.blocksinjector.Main
 api-version: 1.13
 load: STARTUP
@@ -7,3 +7,6 @@ depend:
   - ItemsAdder
   - ViaVersion
   - Iris
+softdepend:
+  - FastAsyncWorldEdit
+  - WorldEdit
