--- a/itemsadder-blocks-injector-core/src/main/resources/plugin.yml
+++ b/itemsadder-blocks-injector-core/src/main/resources/plugin.yml
@@ -3,8 +3,9 @@ version: 0.0.5
 main: dev.lone.blocksinjector.Main
 api-version: 1.13
 load: STARTUP
+softdepend:
+  - Iris
 depend:
   - ItemsAdder
   - ViaVersion
-  - Iris
   - LoneLibs
