--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <jars_libs_folder>C:/Progetti/Minecraft/Spigot/_jars</jars_libs_folder>
-        <plugins_folder>C:/Progetti/Minecraft/Spigot/_jars/</plugins_folder>
+        <plugins_folder>C:/Progetti/Minecraft/TestServer/1.19/plugins</plugins_folder>
     </properties>
 
     <groupId>dev.lone</groupId>
