--- a/itemsadder-blocks-injector-core/src/main/resources/plugin.yml
+++ b/itemsadder-blocks-injector-core/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: ItemsAdderBlocksInjector
-version: 0.0.8-r2
+version: 0.0.9
 main: dev.lone.blocksinjector.Main
 api-version: 1.13
 load: STARTUP
