--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-<!--        <jars_libs_folder>C:/Progetti/Minecraft/Spigot/_jars</jars_libs_folder>-->
-        <jars_libs_folder>C:/Progetti/Minecraft/TestServer/blank_template/template - crash generation/plugins/</jars_libs_folder>
+        <jars_libs_folder>C:/Progetti/Minecraft/Spigot/_jars</jars_libs_folder>
     </properties>
 
     <groupId>dev.lone</groupId>
@@ -17,6 +16,7 @@
     <version>LATEST_VER</version>
     <packaging>pom</packaging>
     <modules>
+        <module>nms_v1_19_R3</module>
         <module>nms_v1_19_R2</module>
         <module>nms_v1_19_R1</module>
         <module>nms_v1_18_R2</module>
