--- a/itemsadder-blocks-injector-jar/pom.xml
+++ b/itemsadder-blocks-injector-jar/pom.xml
@@ -64,6 +64,12 @@
 
         <dependency>
             <groupId>dev.lone</groupId>
+            <artifactId>nms_v1_20_R1</artifactId>
+            <version>LATEST_VER</version>
+        </dependency>
+
+        <dependency>
+            <groupId>dev.lone</groupId>
             <artifactId>nms_v1_19_R3</artifactId>
             <version>LATEST_VER</version>
         </dependency>
