--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <version>LATEST_VER</version>
     <packaging>pom</packaging>
     <modules>
+        <module>nms_v1_20_R1</module>
         <module>nms_v1_19_R3</module>
         <module>nms_v1_19_R2</module>
         <module>nms_v1_19_R1</module>
