Added 1.20.2 and 1.20.3 support

--- a/itemsadder-blocks-injector-jar/pom.xml
+++ b/itemsadder-blocks-injector-jar/pom.xml
@@ -64,6 +64,18 @@
 
         <dependency>
             <groupId>dev.lone</groupId>
+            <artifactId>nms_v1_20_R3</artifactId>
+            <version>LATEST_VER</version>
+        </dependency>
+
+        <dependency>
+            <groupId>dev.lone</groupId>
+            <artifactId>nms_v1_20_R2</artifactId>
+            <version>LATEST_VER</version>
+        </dependency>
+
+        <dependency>
+            <groupId>dev.lone</groupId>
             <artifactId>nms_v1_20_R1</artifactId>
             <version>LATEST_VER</version>
         </dependency>
