--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>dev.lone</groupId>
     <artifactId>itemsadder-blocks-injector</artifactId>
-    <version>LATEST_VER</version>
+    <version>0.0.13</version>
     <packaging>pom</packaging>
     <modules>
         <module>nms_v1_20_R3</module>
