--- a/nms_v1_21_4/pom.xml
+++ b/nms_v1_21_4/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>nms_v1_20_R2</artifactId>
+    <artifactId>nms_v1_21_4</artifactId>
     <packaging>jar</packaging>
 
     <parent>
@@ -12,6 +12,11 @@
         <artifactId>itemsadder-blocks-injector</artifactId>
         <version>0.0.16</version>
     </parent>
+
+    <properties>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+    </properties>
 
     <build>
         <plugins>
@@ -35,7 +40,7 @@
         <dependency>
             <groupId>ca.bkaw</groupId>
             <artifactId>paper-nms</artifactId>
-            <version>1.20.2-SNAPSHOT</version>
+            <version>1.21.4-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
