--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,10 @@
 
     <groupId>dev.lone</groupId>
     <artifactId>itemsadder-blocks-injector</artifactId>
-    <version>0.0.16</version>
+    <version>0.0.17</version>
     <packaging>pom</packaging>
     <modules>
+        <module>nms_v1_21_5</module>
         <module>nms_v1_21_4</module>
         <module>nms_v1_21_1</module>
         <module>nms_v1_20_6</module>
