--- a/itemsadder-blocks-injector-core/pom.xml
+++ b/itemsadder-blocks-injector-core/pom.xml
@@ -5,76 +5,12 @@
     <parent>
         <artifactId>itemsadder-blocks-injector</artifactId>
         <groupId>dev.lone</groupId>
-        <version>0.0.18</version>
+        <version>0.0.19</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>itemsadder-blocks-injector-core</artifactId>
     <packaging>jar</packaging>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.4</version>
-                <configuration>
-                    <minimizeJar>true</minimizeJar> <!-- Used to remove unused libs code from the "includes" list -->
-                    <filters>
-                        <filter>
-                            <excludeDefaults>false</excludeDefaults>
-                            <artifact>*:*</artifact>
-                            <includes>
-                                <include>org.apache.*</include>
-                            </includes>
-                            <!-- Do not include META-INF of the libs in the final build -->
-                            <excludes>
-                                <exclude>META-INF/**</exclude>
-                            </excludes>
-                        </filter>
-                    </filters>
-                    <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
-                    <relocations>
-                        <!-- Fixing RealisticWorldGenerator shit-->
-                        <relocation>
-                            <pattern>com.syntaxphoenix.syntaxapi</pattern>
-                            <shadedPattern>net.sourcewriters.spigot.rwg.legacy.shaded.synapi</shadedPattern>
-                        </relocation>
-                        <!-- Shade libs -->
-                        <relocation>
-                            <pattern>org.apache.commons.math3</pattern>
-                            <shadedPattern>dev.lone.shaded.itemsadder.org.apache.commons.math3</shadedPattern>
-                        </relocation>
-                        <relocation>
-                            <pattern>assets.org.apache</pattern>
-                            <shadedPattern>dev.lone.shaded.itemsadder.assets.org.apache</shadedPattern>
-                        </relocation>
-                        <relocation>
-                            <pattern>math.fast</pattern>
-                            <shadedPattern>dev.lone.shaded.itemsadder.math.fast</shadedPattern>
-                        </relocation>
-                    </relocations>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <createDependencyReducedPom>true</createDependencyReducedPom>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-<!--        <resources>-->
-<!--            <resource>-->
-<!--                <directory>src/main/resources</directory>-->
-<!--                <filtering>true</filtering>-->
-<!--            </resource>-->
-<!--        </resources>-->
-    </build>
 
     <repositories>
         <repository>
@@ -85,6 +21,10 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>maven-snapshots</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -92,9 +32,16 @@
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>RELEASE</version>
+            <version>26.0.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.alessiodp.libby</groupId>
+            <artifactId>libby-bukkit</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
         <dependency>
             <groupId>libs</groupId>
             <artifactId>ViaVersion</artifactId>
@@ -119,7 +66,7 @@
         <dependency>
             <groupId>beer.devs</groupId>
             <artifactId>FastNbt-jar</artifactId>
-            <version>1.4.8</version>
+            <version>1.4.10</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
