--- a/nms_v1_21_5/pom.xml
+++ b/nms_v1_21_5/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>dev.lone</groupId>
         <artifactId>itemsadder-blocks-injector</artifactId>
-        <version>0.0.18</version>
+        <version>0.0.19</version>
     </parent>
 
     <properties>
@@ -46,8 +46,16 @@
         <dependency>
             <groupId>dev.lone</groupId>
             <artifactId>itemsadder-blocks-injector-core</artifactId>
-            <version>0.0.18</version>
+            <version>0.0.19</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>libs</groupId>
+            <artifactId>ViaVersion</artifactId>
+            <version>5.4.2</version>
+            <scope>system</scope>
+            <systemPath>${jars_libs_folder}/ViaVersion-5.4.2-SNAPSHOT.jar</systemPath>
         </dependency>
 
     </dependencies>
