--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,11 @@
 
     <groupId>dev.lone</groupId>
     <artifactId>itemsadder-blocks-injector</artifactId>
-    <version>0.0.18</version>
+    <version>0.0.19</version>
     <packaging>pom</packaging>
     <modules>
+        <module>nms_v1_21_7</module>
+        <module>nms_v1_21_6</module>
         <module>nms_v1_21_5</module>
         <module>nms_v1_21_4</module>
         <module>nms_v1_21_1</module>
