--- a/nms_v1_21_8/pom.xml
+++ b/nms_v1_21_8/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>nms_v1_19_R1</artifactId>
+    <artifactId>nms_v1_21_8</artifactId>
     <packaging>jar</packaging>
 
     <parent>
@@ -13,12 +13,17 @@
         <version>0.0.21</version>
     </parent>
 
+    <properties>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>ca.bkaw</groupId>
                 <artifactId>paper-nms-maven-plugin</artifactId>
-                <version>1.4.4</version>
+                <version>1.4.8</version>
                 <executions>
                     <execution>
                         <phase>process-classes</phase>
@@ -35,7 +40,7 @@
         <dependency>
             <groupId>ca.bkaw</groupId>
             <artifactId>paper-nms</artifactId>
-            <version>1.19.2-SNAPSHOT</version>
+            <version>1.21.8-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -43,6 +48,14 @@
             <artifactId>itemsadder-blocks-injector-core</artifactId>
             <version>0.0.21</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>libs</groupId>
+            <artifactId>ViaVersion</artifactId>
+            <version>5.4.2</version>
+            <scope>system</scope>
+            <systemPath>${jars_libs_folder}/ViaVersion-5.4.2-SNAPSHOT.jar</systemPath>
         </dependency>
 
     </dependencies>
